@@ -1,10 +1,6 @@
 package com.github.scribejava.apis;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
-import com.github.scribejava.core.extractors.OAuth2AccessTokenJsonExtractor;
-import com.github.scribejava.core.extractors.TokenExtractor;
-import com.github.scribejava.core.model.OAuth2AccessToken;
-import com.github.scribejava.core.model.Verb;
 
 public class TheThingsNetworkV1StagingApi extends DefaultApi20 {
 
@@ -20,11 +16,6 @@ public class TheThingsNetworkV1StagingApi extends DefaultApi20 {
     }
 
     @Override
-    public Verb getAccessTokenVerb() {
-        return Verb.POST;
-    }
-
-    @Override
     public String getAccessTokenEndpoint() {
         return "https://account.thethingsnetwork.org/users/token";
     }
@@ -32,10 +23,5 @@ public class TheThingsNetworkV1StagingApi extends DefaultApi20 {
     @Override
     protected String getAuthorizationBaseUrl() {
         return "https://account.thethingsnetwork.org/users/authorize";
-    }
-
-    @Override
-    public TokenExtractor<OAuth2AccessToken> getAccessTokenExtractor() {
-        return OAuth2AccessTokenJsonExtractor.instance();
     }
 }
