@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * update Facebook v2.6 -> v2.8
+ * add The Things Network API (v1-staging and v2-preview) (thanks to https://github.com/jpmeijers)
 
 [3.2.0]
  * Add Naver API (thanks to chooco)
